Terraform/AWS/4-nat_gw.tf
resource "aws_eip" "nat_eip_az1" {
  domain = "vpc"
}

# resource "aws_eip" "nat_eip_az2" {
#   domain = "vpc"
# }

resource "aws_nat_gateway" "nat_gw_az1" {
  allocation_id = aws_eip.nat_eip_az1.id
  subnet_id     = aws_subnet.public_subnet_a.id

  tags = {
    Name = "AZ_1_nat_gw"
  }
}

# resource "aws_nat_gateway" "nat_gw_az2" {
#   allocation_id = aws_eip.nat_eip_az2.id
#   subnet_id     = aws_subnet.public_subnet_b.id

#   tags = {
#     Name = "AZ_2_nat_gw"
#   }
# }
