Terraform/AWS/6-route_tables_associations.tf
resource "aws_route_table_association" "public_assoc_a" {
  subnet_id      = aws_subnet.public_subnet_a.id
  route_table_id = aws_route_table.public_rt_az1.id
}


# resource "aws_route_table_association" "public_assoc_b" {
#   subnet_id      = aws_subnet.public_subnet_b.id
#   route_table_id = aws_route_table.public_rt_az2.id
# }


resource "aws_route_table_association" "private_assoc_az1" {
  subnet_id      = aws_subnet.private_subnet_a.id
  route_table_id = aws_route_table.private_rt_az1.idz
}

# resource "aws_route_table_association" "private_assoc_az2" {
#   subnet_id      = aws_subnet.private_subnet_b.id
#   route_table_id = aws_route_table.private_rt_az2.id
# }
